# rustsbi

./: .axconfig.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  LICENSE-MULAN  Makefile  Makefile.toml  README.md  _typos.toml  build.rs  build.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
arceboot/: Cargo.toml  LICENSE  link.ld  rust-toolchain.toml
arceboot/configs/: defconfig.toml
arceboot/scripts/make/: build.mk  platform.mk
arceboot/scripts/test/: build_edk2.sh  check_allocate_test.sh  check_hello_test.sh  check_hello_test_riscv.sh  disk.sh  make_esp.sh  ramdisk_cpio.sh
arceboot/src/: dtb.rs  log.rs  main.rs  panic.rs
arceboot/src/medium/: mod.rs
arceboot/src/runtime/: loader.rs  mod.rs
arceboot/src/runtime/protocol/: block_io.rs  graphics_output.rs  mod.rs
arceboot/src/runtime/protocol/device/: device_path_to_text.rs  mod.rs
arceboot/src/runtime/protocol/fs/: file_protocol_v1.rs  file_protocol_v2.rs
arceboot/src/runtime/service/: boot_service.rs  memory.rs  mod.rs
arceboot/src/shell/: cmd.rs
arceboot/tests/edk2-AllocatePage/: AllocatePage.c  payload.S
arceboot/tests/edk2-Hello/: Hello.inf
arceboot/tests/edk2-HelloRiscv/: HelloRiscv.c  HelloRiscv.inf
configs/: dummy.toml
docs/: book.toml  booting-fedora-in-qemu-using-uboot-and-rustsbi.md  booting-freebsd-in-qemu-using-uboot-and-rustsbi.md  booting-linux-kernel-in-qemu-using-uboot-and-opensbi.md  booting-linux-kernel-in-qemu-using-uboot-and-rustsbi.md  openwrt-patch.patch  (+6 more)
examples/: derive.rs
macros/: CHANGELOG.md  Cargo.toml
macros/src/: lib.rs
platform/k210/: .gitignore  Cargo.toml  README.md  build.rs  justfile  kendryte-k210.dtb  kendryte-k210.dts  kendryte-k210.dtsi  link-k210.ld
platform/k210/.cargo/: config.toml
platform/k210/src/: main.rs
platform/qemu/: Cargo.toml  README.md  justfile  link-qemu.ld  link.ld
platform/qemu/.cargo/: config.toml
platform/qemu/src/: hal.rs  main.rs
platform/qemu/src/hal/: clint.rs  ns16550a.rs
prototyper/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  cliff.toml
prototyper/.github/workflows/: workflow.yml
prototyper/bench-kernel/: Cargo.toml  build.rs
prototyper/bench-kernel/src/: main.rs
prototyper/docs/: booting-archlinux-in-qemu-using-edk2-and-rustsbi.md  booting-archlinux-in-qemu-using-uboot-and-rustsbi.md  booting-fedora-in-qemu-using-uboot-and-rustsbi.md  booting-freebsd-in-qemu-using-uboot-and-rustsbi.md  booting-in-visionfive2-using-uboot-and-rustsbi.md  booting-linux-kernel-in-qemu-using-uboot-and-rustsbi.md  booting-openEuler-23.09-in-qemu-using-uboot-and-rustsbi.md  booting-openwrt-in-qemu-using-uboot-and-rustsbi.md  booting-polyos-in-qemu-using-uboot-and-rustsbi.md  booting-test-kernel-in-qemu-using-uboot-and-rustsbi.md  booting-ubuntu-24.04.1-in-qemu-using-edk2-and-opensbi.md  booting-ubuntu-24.04.1-in-qemu-using-uboot-and-rustsbi.md  booting-ubuntu-24.04.3-in-qemu-using-edk2-and-rustsbi.md
prototyper/prototyper/: Cargo.toml  build.rs  config_example.toml  default.toml
prototyper/prototyper/config/: default.toml  sipeed_m1s_dock.toml
prototyper/prototyper/src/: cfg.rs  devicetree.rs  fail.rs  macros.rs  main.rs
prototyper/prototyper/src/firmware/: dynamic.rs  jump.rs  mod.rs  payload.rs
prototyper/prototyper/src/platform/: aia.rs  clint.rs  console.rs  mod.rs  plic.rs
prototyper/prototyper/src/riscv/: csr.rs  mod.rs
prototyper/prototyper/src/sbi/: console.rs  early_trap.rs  extensions.rs  features.rs  fifo.rs  hart_context.rs  heap.rs  hsm.rs  ipi.rs  logger.rs  mod.rs  pmpm.rs  pmu.rs  rfence.rs  suspend.rs  trap_stack.rs
prototyper/prototyper/src/sbi/trap/: boot.rs  handler.rs  helper.rs  mod.rs
prototyper/src/: board.rs  cfg.rs  clint.rs  console.rs  devicetree.rs  dt.rs  dynamic.rs  fail.rs  fifo.rs  hart_context.rs  hsm.rs  macros.rs  main.rs  payload.rs  reset.rs  rfence.rs  riscv_spec.rs  trap.rs
prototyper/src/firmware/: dynamic.rs  mod.rs  payload.rs
prototyper/src/platform/: clint.rs  console.rs  dynamic.rs  mod.rs  payload.rs  reset.rs
prototyper/src/riscv/: csr.rs
prototyper/src/sbi/: console.rs  early_trap.rs  extensions.rs  fifo.rs  hart_context.rs  heap.rs  hsm.rs  ipi.rs  logger.rs  mod.rs  reset.rs  rfence.rs  trap.rs  trap_stack.rs
prototyper/src/sbi/trap/: boot.rs  handler.rs  mod.rs
prototyper/test-kernel/: Cargo.toml
prototyper/test-kernel/src/: main.rs
prototyper/xtask/src/: bench.rs  logger.rs  main.rs  test.rs
prototyper/xtask/src/utils/: cargo.rs  envs.rs
rustsbi/: Cargo.toml
rustsbi/.cargo/: config.toml
rustsbi/src/: ecall.rs  extension.rs  hart_mask.rs  hsm.rs  legacy_stdio.rs  lib.rs  pmu.rs  privileged.rs  reset.rs  rfence.rs  sta.rs
rustsbi/src/ecall/: hsm.rs  ipi.rs  legacy.rs  rfence.rs  srst.rs
rustsbi/tests/: forward-struct.rs
sbi-rt/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_EN.md
sbi-rt/src/: base.rs  binary.rs  cppc.rs  dbcn.rs  hsm.rs  legacy.rs  lib.rs  nacl.rs  pmu.rs  rfnc.rs  spi.rs  srst.rs  sta.rs  susp.rs  time.rs
sbi-spec/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
sbi-spec/examples/: non-usize-sbiret-emulator.rs  simple-rv128i-emulator.rs
sbi-spec/src/: base.rs  binary.rs  fwft.rs  hsm.rs  lib.rs  mpxy.rs  nacl.rs  pmu.rs  rfnc.rs  spi.rs  srst.rs  sse.rs  sta.rs  susp.rs  time.rs
sbi-testing/: CHANGELOG.md  Cargo.toml  LICENSE-MULAN
sbi-testing/src/: base.rs  dbcn.rs  hsm.rs  lib.rs  log_test.rs  spi.rs  thread.rs  time.rs
supervisor/: Cargo.toml  build.rs
supervisor/src/: drivers.rs  entry.rs  lib.rs  main.rs  platform.rs
supervisor/src/drivers/: uart16550u8.rs
supervisor/src/platform/: qemu_system_riscv64.rs
test-kernel/: Cargo.toml  build.rs  justfile
test-kernel/.cargo/: config.toml
test-kernel/scripts/: rustsbi-test-kernel.its
test-kernel/src/: console.rs  linker32.ld  linker64.ld  main.rs  sbi.rs
xtask/: Cargo.toml
xtask/src/: arceboot.rs  bench.rs  main.rs  prototyper.rs  test.rs
xtask/src/utils/: envs.rs  mod.rs
(+195 files in other folders)
