[workspace]
resolver = "3"
members = [
    "library/macros",
    "library/sbi-rt",
    "library/sbi-spec",
    "library/sbi-testing",
    "library/rustsbi",
    "library/riscv-cove",
    "library/riscv-cove-rt",
    "library/penglai",
    "prototyper/prototyper",
    "prototyper/bench-kernel",
    "prototyper/test-kernel",
    "xtask",
]
default-members = [
    "library/macros",
    "library/sbi-rt",
    "library/sbi-spec",
    "library/rustsbi",
    "library/riscv-cove",
    "library/penglai",
]

[workspace.package]
edition = "2024"
license = "MulanPSL-2.0 OR MIT"
repository = "https://github.com/rustsbi/rustsbi"

[profile.dev]
panic = "abort"

[profile.release]
debug = true
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
