[package]
name = "rustsbi-macros"
description = "Proc-macros for RustSBI, a RISC-V SBI implementation library in Rust"
version = "0.4.0-alpha.1"
authors = [
    "Luo Jia <me@luojia.cc>",
]
repository = "https://github.com/rustsbi/rustsbi"
documentation = "https://docs.rs/rustsbi"
license = "MulanPSL-2.0 OR MIT"
readme = "../README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
syn = "2.0.39"

[features]
default = []
# Run RustSBI macros on machine mode - See Cargo.toml in RustSBI root project
machine = []
