[package]
name = "rustsbi"
description = "Minimal RISC-V's SBI implementation library in Rust"
version = "0.2.0-alpha.1"
authors = ["luojia65 <me@luojia.cc>"]
repository = "https://github.com/luojia65/rustsbi"
documentation = "https://docs.rs/rustsbi"
license = "MIT" # OR MulanPSL-2.0"
readme = "../README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0-alpha.1"
nb = "1.0"
riscv = "0.6"
spin = "0.7"
lazy_static = { version = "1", features = ["spin_no_std"] }
