[package]
name = "rustsbi"
description = "Minimal RISC-V's SBI implementation library in Rust"
version = "0.2.0-alpha.2"
authors = ["luojia65 <me@luojia.cc>"]
repository = "https://github.com/luojia65/rustsbi"
documentation = "https://docs.rs/rustsbi"
license = "MulanPSL-2.0 OR MIT"
readme = "../README.md"
keywords = ["riscv", "sbi", "rustsbi"]
categories = ["os", "embedded", "hardware-support", "no-std"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = [
    "riscv32i-unknown-none-elf", "riscv32imc-unknown-none-elf", "riscv32imac-unknown-none-elf",
    "riscv64imac-unknown-none-elf", "riscv64gc-unknown-none-elf",
]

[dependencies]
embedded-hal = "1.0.0-alpha.1"
nb = "1.0"
riscv = "0.6"
spin = "0.7"
lazy_static = { version = "1", features = ["spin_no_std"] }
