[package]
name = "sbi-testing"
version = "0.0.3-alpha.2"
description = "Provide a set of test cases for supervisors to verify functions of the supervisor executation environment"
categories = ["os", "no-std"]
keywords = ["riscv", "sbi", "rustsbi"]
authors = ["YdrMaster <ydrml@hotmail.com>"]
documentation = "https://docs.rs/sbi-testing"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
default-target = "riscv64imac-unknown-none-elf"
targets = ["riscv32imac-unknown-none-elf", "riscv64imac-unknown-none-elf"]

[dependencies]
sbi-rt = { version = "0.0.3", path = "../sbi-rt" }
sbi-spec = { version = "0.0.8", path = "../sbi-spec" }
riscv = { version = "0.12.0", default-features = false }
log = { version = "0.4", package = "log", optional = true }

[features]
log = ["dep:log"]
