[package]
name = "rustsbi-supervisor"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axstd = { git = "https://github.com/arceos-org/arceos.git", optional = true }

[features]
default = ["axstd"]
axstd = ["dep:axstd"]

log-level-trace = ["axstd/log-level-trace"]
