[package]
name = "test-kernel"
version = "0.1.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = "0.6"
spin = "0.7"
lazy_static = { version = "1", features = ["spin_no_std"] }
