[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap = { version = "4.5.4", features = ["derive", "env", "suggestions"] }
log = "0.4.21"
clap-verbosity-flag = "3.0.2"
serde = "1.0"
toml = "0.8.20"
