[package]
name = "rustsbi-k210"
version = "0.2.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { path = "../../rustsbi" }
riscv = { git = "https://github.com/rust-embedded/riscv", features = ["inline-asm"] }
linked_list_allocator = "0.8"
k210-hal = { git = "https://github.com/riscv-rust/k210-hal" }
r0 = "1.0"
