[package]
name = "rustsbi-qemu"
version = "0.2.0"
authors = ["luojia65 <me@luojia.cc>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustsbi = { path = "../../rustsbi" }

linked_list_allocator = "0.8"
lazy_static = { version = "1", features = ["spin_no_std"] }
spin = "0.7"
riscv = { git = "https://github.com/rust-embedded/riscv", rev = "7e9d2e5b", features = ["inline-asm"] }
device_tree = { git = "https://github.com/rcore-os/device_tree-rs/" }

# 这几个其实不用，应该使用对应的hal库实现
embedded-hal = "1.0.0-alpha.1"
nb = "1"
