[package]
name = "rustsbi-test-kernel"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sbi-testing = { features = ["log"], path = "../../library/sbi-testing" }
log = "0.4"
riscv = "0.11.1"
spin = "0.9"
uart16550 = "0.0.1"
rcore-console = "0.0.0"
dtb-walker = "=0.2.0-alpha.3"

[[bin]]
name = "rustsbi-test-kernel"
test = false
bench = false
